--- a/OtterCoGen/popup.html
+++ b/OtterCoGen/popup.html
@@ -12,8 +12,10 @@
     <body>
         <header>
             <div>
+                <button style="float: right" id="set1" class="material-symbols-outlined">
+                    settings_applications
+                </button>
                 <h1>Otter-PassGen</h1>
-                
             </div>
         </header>
         <main>
@@ -31,21 +33,29 @@
                     <label for="s1"> Include Symbols</label><br>
                     <input type="checkbox" id="s1" name="s1" value="" checked>
                 </div>
-                <h5>Security Address</h5>
-                <input type="text" id="addr" name="address" value="97c489b6c1231ecd9fac99df40e60cec000a70a057d5971fb520c578da8e8841">
-                <textarea style="display: none;" id="base" name="base" rows="3" cols="25">https://travelers.wd5.myworkdayjobs.com/</textarea>
-                <h5>Security Code</h5>
-                <div style="display: flex; transform: scale(0.80);">
-                    <input type="password" id="salt" name="salt" value="">
-                    <button id="sol3" class="material-symbols-outlined">
-                        fingerprint
-                    </button>
+                <div id="main_p">
+                    <h5>Profile</h5>
+                    <input type="text" id="addr" name="address" value="">
+                    <textarea style="display: none;" id="base" name="base" rows="3" cols="25">https://travelers.wd5.myworkdayjobs.com/</textarea>
+                    <h5>Security Key</h5>
+                    <div style="display: flex; transform: scale(0.80);">
+                        <input type="password" id="salt" name="salt" value="">
+                        <button id="sol3" class="material-symbols-outlined">
+                            fingerprint
+                        </button>
+                    </div>
+                    <h4><div id="FQDN" style="transform: translate(0px, 43px);"></div></h4>
+                    <img id="stormy_hs" style="top: 300px; left: 90px; right: 0vw; bottom:10vh;" src="images/stormy_peek.png" class="stormy-image"
+                        alt="Drawing of Stormy's head peeking.">
+                    <img id="stormy_hs" style="top: 150px; left: -260px; right: 0vw; bottom: 10vh; transform: scale(0.25);" src="images/sparky_temp.webp" class="stormy-image"
+                        alt="Drawing of Stormy's head peeking.">
                 </div>
-                <h4><div id="FQDN" style="transform: translate(0px, 43px);"></div></h4>
-                <img id="stormy_hs" style="top: 300px; left: 90px; right: 0vw; bottom:10vh;" src="images/stormy_peek.png" class="stormy-image"
-                     alt="Drawing of Stormy's head peeking.">
-                <img id="stormy_hs" style="top: 150px; left: -260px; right: 0vw; bottom: 10vh; transform: scale(0.25);" src="images/sparky_temp.webp" class="stormy-image"
-                     alt="Drawing of Stormy's head peeking.">
+                <div id="sub_p" style="display:none">
+                    <h5>Server</h5>
+                    <input type="text" id="addrsvr" name="address_svr" value="">
+                    <h5>Alias Server</h5>
+                    <input type="text" id="addralias" name="address_alias" value="">
+                </div>
             </div>
         </main>
         <script src="sha256.js"></script>
